--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,7 +32,7 @@
 /* 
 =========== наша команда
 */
-// @import './layout/team';
+@import './layout/team';
 // @import './components/soc-list';
 /* 
 =========== наши клиенты
