--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -2,37 +2,60 @@
   background-color: getColor('secondaryBgr');
 
   &__list {
-    @extend %list;
-    // display: flex;
-    // flex-wrap: wrap;
-    @include flexWrap();
+    @include list;
+
+    @media screen and (min-width: $tablet) and (min-width: $pre_desktop) {
+      @include flexWrap();
+    }
+
+    @media screen and (min-width: $desktop) {
+      display: flex;
+    }
   }
 
   &__item {
-    width: 270px;
+    width: 450px;
     background-color: getColor('mainBgr');
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    @media screen and (max-width: $pre_tablet) {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
+
+    @media screen and (min-width: $tablet) and (min-width: $pre_desktop) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: $desktop) {
+      width: 270px;
+
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
+    }
   }
 
-  &__item:not(:last-child) {
-    margin-right: 30px;
+  &__img {
+    @include img;
+    margin-bottom: 30px;
   }
 
   &__notify {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 18px;
+
+    @media screen and (min-width: $desktop) {
+      margin-bottom: 30px;
+    }
   }
 
   &__name {
     margin-top: 0;
     margin-bottom: 10px;
 
-    // font-weight: 500;
-    // font-size: 16px;
-    // line-height: 1.19;
-    // letter-spacing: 0.03em;
     @include font(500, 16px, 1.19, 0.03em);
 
     text-align: center;
@@ -42,14 +65,16 @@
     margin-top: 0;
     margin-bottom: 16px;
 
-    color: getColor('secondaryText');
-
-    // font-weight: 400;
-    // font-size: 16px;
-    // line-height: 1.19;
-    // letter-spacing: 0.03em;
     @include font(400, 16px, 1.19, 0.03em);
-
     text-align: center;
+
+    color: getColor('secondaryText');
+  }
+
+  @media screen and (min-width: $tablet) {
+    &__notify {
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
   }
 }
