--- a/sass/components/_footer-soc-list.scss
+++ b/sass/components/_footer-soc-list.scss
@@ -13,3 +13,14 @@
 //     background-color: getColor('brand');
 //   }
 // }
+
+.footer__soc-list-link {
+  color: getColor('secondaryBrand');
+  background-color: getColor('footerSocialsBgr');
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: getColor('brand');
+  }
+}
