--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,23 +1,8 @@
 .footer {
-  // padding-top: 60px;
+  padding-top: 60px;
   padding-bottom: 60px;
+
+  text-align: center;
+
   background-color: getColor('footerBgr');
-}
-
-.footer__container {
-  display: flex;
-}
-
-.footer__title {
-  margin-top: 0;
-  margin-bottom: 20px;
-  color: getColor('secondaryBrand');
-
-  // font-weight: 700;
-  // font-size: 14px;
-  // line-height: 1.14;
-  // letter-spacing: 0.03em;
-  @include font(700, 14px, 1.14, 0.03em);
-
-  text-transform: uppercase;
 }
