--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -4,8 +4,9 @@
   &__list {
     @include list;
 
-    @media screen and (min-width: $tablet) and (min-width: $pre_desktop) {
+    @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
       @include flexWrap();
+      margin: -15px;
     }
 
     @media screen and (min-width: $desktop) {
@@ -14,7 +15,7 @@
   }
 
   &__item {
-    width: 450px;
+    width: 100%;
     background-color: getColor('mainBgr');
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -26,12 +27,13 @@
       }
     }
 
-    @media screen and (min-width: $tablet) and (min-width: $pre_desktop) {
-      width: 354px;
+    @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
+      width: calc((100% - 2 * 30px) / 2);
+      margin: 15px;
     }
 
     @media screen and (min-width: $desktop) {
-      width: 270px;
+      width: calc((100% - 3 * 30px) / 4);
 
       &:not(:last-child) {
         margin-right: 30px;
@@ -45,7 +47,7 @@
   }
 
   &__notify {
-    margin-bottom: 18px;
+    margin-bottom: 24px;
 
     @media screen and (min-width: $desktop) {
       margin-bottom: 30px;
@@ -69,12 +71,5 @@
     text-align: center;
 
     color: getColor('secondaryText');
-  }
-
-  @media screen and (min-width: $tablet) {
-    &__notify {
-      margin-top: 30px;
-      margin-bottom: 30px;
-    }
   }
 }
