--- a/sass/components/_footer-soc-list.scss
+++ b/sass/components/_footer-soc-list.scss
@@ -1,7 +1,10 @@
 .footer__soc-list {
-  margin-top: 72px;
-  margin-right: 93px;
+  margin-bottom: 60px;
 }
+// .footer__soc-list {
+//   margin-top: 72px;
+//   margin-right: 93px;
+// }
 
 // .footer__soc-list-link {
 //   color: getColor('secondaryBrand');
