--- a/css/main.css
+++ b/css/main.css
@@ -316,7 +316,7 @@ body {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 2px solid tomato;
+  border: 2px solid tomato;
 }
 @media screen and (min-width: 480px) {
   .container {
@@ -361,7 +361,7 @@ body {
 .logo--footer {
   margin-bottom: 20px;
 }
-.logo__text--footer {
+.logo--footer__text {
   color: #fff;
 }
 
@@ -385,7 +385,6 @@ body {
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
-    height: 400px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -420,7 +419,6 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px 32px;
   min-width: 200px;
   height: 50px;
   font-weight: 700;
@@ -471,7 +469,6 @@ body {
 @media screen and (min-width: 1200px) {
   .peculiarity__item {
     width: calc((100% - 120px) / 4);
-    margin: 15px;
   }
 }
 .peculiarity__box {
@@ -607,7 +604,9 @@ body {
   }
 }
 .team__item {
+  padding-bottom: 24px;
   width: 100%;
+  text-align: center;
   background-color: #fff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -626,6 +625,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .team__item {
+    padding-bottom: 30px;
     width: calc((100% - 90px) / 4);
   }
   .team__item:not(:last-child) {
@@ -638,14 +638,6 @@ body {
   height: auto;
   margin-bottom: 30px;
 }
-.team__notify {
-  margin-bottom: 24px;
-}
-@media screen and (min-width: 1200px) {
-  .team__notify {
-    margin-bottom: 30px;
-  }
-}
 .team__name {
   margin-top: 0;
   margin-bottom: 10px;
@@ -653,7 +645,6 @@ body {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  text-align: center;
 }
 .team__position {
   margin-top: 0;
@@ -662,7 +653,6 @@ body {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  text-align: center;
   color: #757575;
 }
 
@@ -774,8 +764,19 @@ body {
   text-align: center;
   background-color: #2f303a;
 }
+.footer__title {
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
 
 .footer__address-meta {
+  margin-bottom: 60px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.72;
@@ -813,6 +814,82 @@ body {
 .footer__contact-link:hover, .footer__contact-link:focus {
   color: #2196f3;
   cursor: pointer;
+}
+
+.footer__soc-list {
+  margin-bottom: 60px;
+}
+
+.footer__soc-list-link {
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer__soc-list-link:hover, .footer__soc-list-link:focus {
+  background-color: #2196f3;
+}
+
+@media screen and (max-width: 767px) {
+  .subscribe__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+.subscribe__mail {
+  width: 100%;
+  height: 50px;
+  padding: 15px 16px;
+  margin-bottom: 20px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: inherit;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.subscribe__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: #fff;
+  background: #2196f3;
+  border: 0;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe__btn:hover, .subscribe__btn:focus {
+  background-color: #188ce8;
+  cursor: pointer;
+}
+
+.subscribe__text {
+  margin-right: 10px;
 }
 
 /* 
