--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -3,7 +3,7 @@
   padding-left: 15px;
   padding-right: 15px;
 
-  outline: 2px solid tomato;
+  border: 2px solid tomato;
 
   @media screen and (min-width: $mobile) {
     width: $mobile;
