--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -15,7 +15,11 @@
   }
 
   &__item {
+    padding-bottom: 24px;
     width: 100%;
+
+    text-align: center;
+
     background-color: getColor('mainBgr');
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -33,6 +37,7 @@
     }
 
     @media screen and (min-width: $desktop) {
+      padding-bottom: 30px;
       width: calc((100% - 3 * 30px) / 4);
 
       &:not(:last-child) {
@@ -46,21 +51,11 @@
     margin-bottom: 30px;
   }
 
-  &__notify {
-    margin-bottom: 24px;
-
-    @media screen and (min-width: $desktop) {
-      margin-bottom: 30px;
-    }
-  }
-
   &__name {
     margin-top: 0;
     margin-bottom: 10px;
 
     @include font(500, 16px, 1.19, 0.03em);
-
-    text-align: center;
   }
 
   &__position {
@@ -68,7 +63,6 @@
     margin-bottom: 16px;
 
     @include font(400, 16px, 1.19, 0.03em);
-    text-align: center;
 
     color: getColor('secondaryText');
   }
