--- a/sass/main.scss
+++ b/sass/main.scss
@@ -43,8 +43,8 @@
 */
 @import './layout/footer';
 @import './components/footer-address';
-// @import './components/footer-soc-list';
-// @import './components/footer-subscribe';
+@import './components/footer-soc-list';
+@import './components/footer-subscribe';
 /* 
 =========== модальное окно
 */
