--- a/sass/components/_footer-subscribe.scss
+++ b/sass/components/_footer-subscribe.scss
@@ -6,7 +6,12 @@
     @include flexWrap();
   }
 
-  @media screen and (min-width: $tablet) {
+  // @media screen and (min-width: $tablet) {
+  //   // display: flex;
+  //   // align-items: center;
+  // }
+
+  @media screen and (min-width: $desktop) {
     // display: flex;
     // align-items: center;
   }
@@ -28,6 +33,10 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+
+  @media screen and (min-width: $tablet) {
+    width: 450px;
+  }
 }
 
 .subscribe__btn {
