--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -15,4 +15,10 @@
 
     text-transform: uppercase;
   }
+
+  @media screen and (min-width: $desktop) {
+    &__container {
+      display: flex;
+    }
+  }
 }
