--- a/css/main.css
+++ b/css/main.css
@@ -761,7 +761,6 @@ body {
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  text-align: center;
   background-color: #2f303a;
 }
 .footer__title {
@@ -773,6 +772,11 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+@media screen and (max-width: 1199px) {
+  .footer {
+    text-align: center;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer__container {
@@ -847,6 +851,11 @@ body {
     vertical-align: top;
   }
 }
+@media screen and (min-width: 1200px) {
+  .footer__soc-list {
+    margin-right: 93px;
+  }
+}
 
 .footer__soc-list-link {
   color: #fff;
@@ -867,11 +876,21 @@ body {
         flex-wrap: wrap;
   }
 }
+@media screen and (min-width: 1200px) {
+  .subscribe__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .subscribe__mail {
   width: 100%;
   height: 50px;
   padding: 15px 16px;
-  margin-bottom: 20px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -883,9 +902,20 @@ body {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .subscribe__mail {
     width: 450px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .subscribe__mail {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__mail {
+    width: 100%;
+    margin-right: 12px;
   }
 }
 
@@ -901,8 +931,7 @@ body {
           justify-content: center;
   width: 200px;
   height: 50px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 0;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -916,12 +945,20 @@ body {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 1199px) {
+  .subscribe__btn {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 .subscribe__btn:hover, .subscribe__btn:focus {
   background-color: #188ce8;
   cursor: pointer;
 }
 
 .subscribe__text {
+  margin-top: 0;
+  margin-bottom: 0;
   margin-right: 10px;
 }
 
