--- a/sass/components/_footer-subscribe.scss
+++ b/sass/components/_footer-subscribe.scss
@@ -12,8 +12,10 @@
   // }
 
   @media screen and (min-width: $desktop) {
-    // display: flex;
-    // align-items: center;
+    display: flex;
+    align-items: center;
+    // flex-grow: 5;
+    // margin-left: auto;
   }
 }
 
@@ -21,11 +23,8 @@
   width: 100%;
   height: 50px;
   padding: 15px 16px;
-  margin-bottom: 20px;
 
   @include font(400, 16px, 1.25, 0.03em);
-
-  // @include font(400, 16px, 1.72, 0.03em);
 
   color: getColor('footerContacts');
 
@@ -34,8 +33,17 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
     width: 450px;
+  }
+
+  @media screen and (max-width: $pre_desktop) {
+    margin-bottom: 20px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 100%;
+    margin-right: 12px;
   }
 }
 
@@ -43,8 +51,7 @@
   @include centeredFlex();
   width: 200px;
   height: 50px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 0;
 
   @include font(700, 16px, 1.88, 0.06em);
 
@@ -56,6 +63,11 @@
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  @media screen and (max-width: $pre_desktop) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   &:hover,
   &:focus {
     background-color: getColor('aktiveBtn');
@@ -64,5 +76,7 @@
 }
 
 .subscribe__text {
+  margin-top: 0;
+  margin-bottom: 0;
   margin-right: 10px;
 }
