--- a/css/main.css
+++ b/css/main.css
@@ -763,16 +763,6 @@ body {
   padding-bottom: 60px;
   background-color: #2f303a;
 }
-.footer__title {
-  margin-top: 0;
-  margin-bottom: 20px;
-  color: #fff;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
 @media screen and (max-width: 1199px) {
   .footer {
     text-align: center;
@@ -783,67 +773,78 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
 }
+.footer__title {
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
 
-.footer__address-meta {
+.footer__address {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.72;
   letter-spacing: 0.03em;
 }
 @media screen and (max-width: 1199px) {
-  .footer__address-meta {
+  .footer__address {
     margin-bottom: 60px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .footer__address-meta {
+  .footer__address {
     display: inline-block;
     margin-right: 165px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .footer__address-meta {
+  .footer__address {
     margin-right: 70px;
   }
 }
-
-.footer__address {
+.footer__address__address-meta {
   margin-bottom: 8px;
   font-style: normal;
   color: #fff;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer__address:hover, .footer__address:focus {
+.footer__address__address-meta:hover, .footer__address__address-meta:focus {
   color: #2196f3;
   cursor: pointer;
 }
-
-.footer__contact-list {
+.footer__address__contact-list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-
-.footer__contact-item:not(:last-child) {
+.footer__address__contact-item:not(:last-child) {
   margin-bottom: 8px;
 }
-
-.footer__contact-link {
+.footer__address__contact-link {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer__contact-link:hover, .footer__contact-link:focus {
+.footer__address__contact-link:hover, .footer__address__contact-link:focus {
   color: #2196f3;
   cursor: pointer;
 }
 
-.footer__soc-list {
-  margin-bottom: 60px;
+@media screen and (max-width: 767px) {
+  .footer__soc-list {
+    margin-bottom: 60px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__soc-list {
@@ -902,6 +903,11 @@ body {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+@media screen and (max-width: 767px) {
+  .subscribe__mail {
+    width: 100%;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .subscribe__mail {
     width: 450px;
@@ -914,7 +920,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .subscribe__mail {
-    width: 100%;
+    width: 358px;
     margin-right: 12px;
   }
 }
@@ -931,7 +937,7 @@ body {
           justify-content: center;
   width: 200px;
   height: 50px;
-  padding: 0;
+  padding: 10px 28px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
