--- a/sass/components/_footer-subscribe.scss
+++ b/sass/components/_footer-subscribe.scss
@@ -33,6 +33,10 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
+  @media screen and (max-width: $pre_tablet) {
+    width: 100%;
+  }
+
   @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
     width: 450px;
   }
@@ -42,7 +46,7 @@
   }
 
   @media screen and (min-width: $desktop) {
-    width: 100%;
+    width: 358px;
     margin-right: 12px;
   }
 }
@@ -51,7 +55,7 @@
   @include centeredFlex();
   width: 200px;
   height: 50px;
-  padding: 0;
+  padding: 10px 28px;
 
   @include font(700, 16px, 1.88, 0.06em);
 
