--- a/css/main.css
+++ b/css/main.css
@@ -857,14 +857,13 @@ body {
     margin-right: 93px;
   }
 }
-
-.footer__soc-list-link {
+.footer__soc-list__soc-list-link {
   color: #fff;
   background-color: rgba(255, 255, 255, 0.1);
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer__soc-list-link:hover, .footer__soc-list-link:focus {
+.footer__soc-list__soc-list-link:hover, .footer__soc-list__soc-list-link:focus {
   background-color: #2196f3;
 }
 
@@ -887,7 +886,6 @@ body {
             align-items: center;
   }
 }
-
 .subscribe__mail {
   width: 100%;
   height: 50px;
@@ -908,14 +906,14 @@ body {
     width: 100%;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .subscribe__mail {
-    width: 450px;
-  }
-}
 @media screen and (max-width: 1199px) {
   .subscribe__mail {
     margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .subscribe__mail {
+    width: 450px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -924,7 +922,6 @@ body {
     margin-right: 12px;
   }
 }
-
 .subscribe__btn {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -961,7 +958,6 @@ body {
   background-color: #188ce8;
   cursor: pointer;
 }
-
 .subscribe__text {
   margin-top: 0;
   margin-bottom: 0;
