--- a/sass/components/_footer-soc-list.scss
+++ b/sass/components/_footer-soc-list.scss
@@ -11,15 +11,15 @@
   @media screen and (min-width: $desktop) {
     margin-right: 93px;
   }
-}
 
-.footer__soc-list-link {
-  color: getColor('secondaryBrand');
-  background-color: getColor('footerSocialsBgr');
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &__soc-list-link {
+    color: getColor('secondaryBrand');
+    background-color: getColor('footerSocialsBgr');
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover,
-  &:focus {
-    background-color: getColor('brand');
+    &:hover,
+    &:focus {
+      background-color: getColor('brand');
+    }
   }
 }
