--- a/sass/components/_footer-subscribe.scss
+++ b/sass/components/_footer-subscribe.scss
@@ -1,86 +1,78 @@
-.footer__subscribe {
-}
+.subscribe {
+  &__form {
+    @media screen and (max-width: $pre_tablet) {
+      @include flexWrap();
+    }
 
-.subscribe__form {
-  @media screen and (max-width: $pre_tablet) {
-    @include flexWrap();
+    @media screen and (min-width: $desktop) {
+      display: flex;
+      align-items: center;
+    }
   }
 
-  // @media screen and (min-width: $tablet) {
-  //   // display: flex;
-  //   // align-items: center;
-  // }
-
-  @media screen and (min-width: $desktop) {
-    display: flex;
-    align-items: center;
-    // flex-grow: 5;
-    // margin-left: auto;
-  }
-}
-
-.subscribe__mail {
-  width: 100%;
-  height: 50px;
-  padding: 15px 16px;
-
-  @include font(400, 16px, 1.25, 0.03em);
-
-  color: getColor('footerContacts');
-
-  background-color: inherit;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-
-  @media screen and (max-width: $pre_tablet) {
+  &__mail {
     width: 100%;
+    height: 50px;
+    padding: 15px 16px;
+
+    @include font(400, 16px, 1.25, 0.03em);
+
+    color: getColor('footerContacts');
+
+    background-color: inherit;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    @media screen and (max-width: $pre_tablet) {
+      width: 100%;
+    }
+
+    @media screen and (max-width: $pre_desktop) {
+      margin-bottom: 20px;
+    }
+
+    @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
+      width: 450px;
+    }
+
+    @media screen and (min-width: $desktop) {
+      width: 358px;
+      margin-right: 12px;
+    }
   }
 
-  @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
-    width: 450px;
+  &__btn {
+    @include centeredFlex();
+    width: 200px;
+    height: 50px;
+    padding: 10px 28px;
+
+    @include font(700, 16px, 1.88, 0.06em);
+
+    color: getColor('secondaryBrand');
+    background: getColor('brand');
+    border: 0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (max-width: $pre_desktop) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    &:hover,
+    &:focus {
+      background-color: getColor('aktiveBtn');
+      cursor: pointer;
+    }
   }
 
-  @media screen and (max-width: $pre_desktop) {
-    margin-bottom: 20px;
+  &__text {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 10px;
   }
-
-  @media screen and (min-width: $desktop) {
-    width: 358px;
-    margin-right: 12px;
-  }
-}
-
-.subscribe__btn {
-  @include centeredFlex();
-  width: 200px;
-  height: 50px;
-  padding: 10px 28px;
-
-  @include font(700, 16px, 1.88, 0.06em);
-
-  color: getColor('secondaryBrand');
-  background: getColor('brand');
-  border: 0;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  @media screen and (max-width: $pre_desktop) {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  &:hover,
-  &:focus {
-    background-color: getColor('aktiveBtn');
-    cursor: pointer;
-  }
-}
-
-.subscribe__text {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-right: 10px;
 }
