--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,12 +48,12 @@
 /* 
 =========== модальное окно
 */
-// @import './components/backdrop';
-// @import './components/modal';
-// @import './components/form';
+@import './components/backdrop';
+@import './components/modal';
+@import './components/form';
 /* 
 =========== портфолио
 */
-// @import './layout/portfolio';
+@import './layout/portfolio';
 // @import './components/portfolio-filter-btn';
-// @import './components/portfolio-project-card';
+@import './components/portfolio-project-card';
