--- a/sass/backup/_formBACKUP.scss
+++ b/sass/backup/_formBACKUP.scss
@@ -2,29 +2,26 @@
   margin-top: 0;
   margin-bottom: 12px;
 
-  // font-weight: 700;
-  // font-size: 20px;
-  // line-height: 1.15;
-  // letter-spacing: 0.03em;
-  @include font(700, 20px, 1.15, 0.03em);
-
+  @include font(700, 20px, 1.5, 0.03em);
   text-align: center;
+
+  @media screen and (min-width: $desktop) {
+    @include font(700, 20px, 1.15, 0.03em);
+  }
 }
 
 .form__group {
-  width: 448px;
   margin-bottom: 20px;
 }
 
 .form__field {
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:last-child {
-    margin-bottom: 0;
+  &:not(:last-child) {
+    margin-bottom: 10px;
   }
 
   &:hover,
@@ -36,10 +33,6 @@
 .form__label {
   margin-bottom: 4px;
 
-  // font-weight: 400;
-  // font-size: 12px;
-  // line-height: 1.17;
-  // letter-spacing: 0.01em;
   @include font(400, 12px, 1.17, 0.01em);
 
   color: getColor('secondaryText');
@@ -104,10 +97,6 @@
   }
 
   &::placeholder {
-    // font-weight: 400;
-    // font-size: 12px;
-    // line-height: 1.17;
-    // letter-spacing: 0.01em;
     @include font(400, 12px, 1.17, 0.01em);
 
     color: getColor('placeholderText');
@@ -122,20 +111,18 @@
   display: flex;
   align-items: center;
 
-  // font-weight: 400;
-  // font-size: 14px;
-  // line-height: 1.72;
-  // letter-spacing: 0.03em;
-  @include font(400, 14px, 1.72, 0.03em);
+  @include font(400, 12px, 1.17, 0.03em);
 
   color: getColor('secondaryText');
+
   cursor: pointer;
+
+  @media screen and (min-width: $desktop) {
+    @include font(400, 14px, 1.72, 0.03em);
+  }
 }
 
 .form__privacy-check-icon {
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
   @include centeredFlex();
 
   width: 16px;
@@ -159,26 +146,19 @@
 }
 
 .form__policy-link {
-  @extend %link;
+  @include link;
   margin-left: 3px;
   color: getColor('brand');
   text-decoration: underline;
 }
 
 .form__submit-btn {
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
   @include centeredFlex();
   margin-left: auto;
   margin-right: auto;
   width: 200px;
   height: 50px;
 
-  // font-weight: 700;
-  // font-size: 16px;
-  // line-height: 1.88;
-  // letter-spacing: 0.06em;
   @include font(700, 16px, 1.88, 0.06em);
 
   color: getColor('secondaryBrand');
