--- a/sass/components/_footer-soc-list.scss
+++ b/sass/components/_footer-soc-list.scss
@@ -1,18 +1,5 @@
 .footer__soc-list {
-  @media screen and (max-width: $pre_tablet) {
-    margin-bottom: 60px;
-  }
-
-  @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
-    display: inline-block;
-    vertical-align: top;
-  }
-
-  @media screen and (min-width: $desktop) {
-    margin-right: 93px;
-  }
-
-  &__soc-list-link {
+  &-link {
     color: getColor('secondaryBrand');
     background-color: getColor('footerSocialsBgr');
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
