--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,184 +1,166 @@
-.form__title {
-  margin-top: 0;
-  margin-bottom: 12px;
+.form {
+  &__title {
+    margin-top: 0;
+    margin-bottom: 12px;
 
-  // font-weight: 700;
-  // font-size: 20px;
-  // line-height: 1.15;
-  // letter-spacing: 0.03em;
-  @include font(700, 20px, 1.15, 0.03em);
+    @include font(700, 20px, 1.5, 0.03em);
+    text-align: center;
 
-  text-align: center;
-}
-
-.form__group {
-  width: 448px;
-  margin-bottom: 20px;
-}
-
-.form__field {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:last-child {
-    margin-bottom: 0;
+    @media screen and (min-width: $desktop) {
+      @include font(700, 20px, 1.15, 0.03em);
+    }
   }
 
-  &:hover,
-  &:focus {
-    color: getColor('brand');
-  }
-}
-
-.form__label {
-  margin-bottom: 4px;
-
-  // font-weight: 400;
-  // font-size: 12px;
-  // line-height: 1.17;
-  // letter-spacing: 0.01em;
-  @include font(400, 12px, 1.17, 0.01em);
-
-  color: getColor('secondaryText');
-}
-
-.input-box {
-  position: relative;
-}
-
-.form__input {
-  width: 100%;
-  height: 40px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: 42px;
-
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-
-  &:hover,
-  &:focus {
-    border: 1px solid getColor('brand');
-    cursor: pointer;
-
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &__group {
+    margin-bottom: 20px;
   }
 
-  &:hover + .form__icon,
-  &:focus + .form__icon {
-    fill: getColor('brand');
-  }
-}
+  &__field {
+    display: flex;
+    flex-direction: column;
 
-.form__icon {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 12px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  cursor: pointer;
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form__textarea-input {
-  width: 100%;
-  height: 120px;
-  padding: 12px 16px;
-  resize: none;
-  outline: none;
-
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    border: 1px solid getColor('brand');
-    cursor: pointer;
+    &:hover,
+    &:focus {
+      color: getColor('brand');
+    }
   }
 
-  &::placeholder {
-    // font-weight: 400;
-    // font-size: 12px;
-    // line-height: 1.17;
-    // letter-spacing: 0.01em;
+  &__label {
+    margin-bottom: 4px;
+
     @include font(400, 12px, 1.17, 0.01em);
 
-    color: getColor('placeholderText');
+    color: getColor('secondaryText');
   }
-}
 
-.form__policy-field {
-  margin-bottom: 30px;
-}
+  &__input-box {
+    position: relative;
+  }
 
-.form__policy-label {
-  display: flex;
-  align-items: center;
+  &__input {
+    width: 100%;
+    height: 40px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 42px;
 
-  // font-weight: 400;
-  // font-size: 14px;
-  // line-height: 1.72;
-  // letter-spacing: 0.03em;
-  @include font(400, 14px, 1.72, 0.03em);
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
 
-  color: getColor('secondaryText');
-  cursor: pointer;
-}
+    &:hover,
+    &:focus {
+      border: 1px solid getColor('brand');
+      cursor: pointer;
 
-.form__privacy-check-icon {
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
-  @include centeredFlex();
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-  width: 16px;
-  height: 15px;
+    &:hover + .form__icon,
+    &:focus + .form__icon {
+      fill: getColor('brand');
+    }
+  }
 
-  margin-right: 8px;
+  &__icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 12px;
 
-  border: 2px solid getColor('mainText');
-  border-radius: 2px;
+    cursor: pointer;
 
-  fill: transparent;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &__textarea-input {
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    resize: none;
+    outline: none;
 
-.form__privacy-check-input:checked + .form__policy-label .form__privacy-check-icon {
-  background-color: getColor('brand');
-  border: none;
-  fill: getColor('secondaryBrand');
-}
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
 
-.form__policy-link {
-  @extend %link;
-  margin-left: 3px;
-  color: getColor('brand');
-  text-decoration: underline;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      border: 1px solid getColor('brand');
+      cursor: pointer;
+    }
+
+    &::placeholder {
+      @include font(400, 12px, 1.17, 0.01em);
+
+      color: getColor('placeholderText');
+    }
+  }
+
+  &__policy-field {
+    margin-bottom: 30px;
+  }
+
+  &__policy-label {
+    display: flex;
+    align-items: center;
+
+    @include font(400, 12px, 1.17, 0.03em);
+
+    color: getColor('secondaryText');
+
+    cursor: pointer;
+
+    @media screen and (min-width: $desktop) {
+      @include font(400, 14px, 1.72, 0.03em);
+    }
+  }
+
+  &__privacy-check-icon {
+    @include centeredFlex();
+
+    width: 16px;
+    height: 15px;
+
+    margin-right: 8px;
+
+    border: 2px solid getColor('mainText');
+    border-radius: 2px;
+
+    fill: transparent;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__privacy-check-input:checked + .form__policy-label .form__privacy-check-icon {
+    background-color: getColor('brand');
+    border: none;
+    fill: getColor('secondaryBrand');
+  }
+
+  &__policy-link {
+    @include link;
+    margin-left: 3px;
+    color: getColor('brand');
+    text-decoration: underline;
+  }
 }
 
 .form__submit-btn {
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
   @include centeredFlex();
   margin-left: auto;
   margin-right: auto;
   width: 200px;
   height: 50px;
 
-  // font-weight: 700;
-  // font-size: 16px;
-  // line-height: 1.88;
-  // letter-spacing: 0.06em;
   @include font(700, 16px, 1.88, 0.06em);
 
   color: getColor('secondaryBrand');
