--- a/sass/components/_portfolio-project-card.scss
+++ b/sass/components/_portfolio-project-card.scss
@@ -1,18 +1,44 @@
 .project-card {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  display: block;
+  width: 450px;
+
   border-left: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:nth-child(3n) {
-    margin-right: 0;
+  @media screen and (max-width: $pre_tablet) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
 
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+  @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
+    width: calc((100% - 30px) / 2);
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: calc((100% - 2 * 30px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
 
   &:hover,
@@ -26,7 +52,7 @@
 }
 
 .project-link {
-  @extend %link;
+  @include link;
 }
 
 .overlay-card-box {
@@ -36,9 +62,7 @@
 
 .project-card-overlay {
   position: absolute;
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
+
   @include centeredFlex();
 
   top: 0;
@@ -52,17 +76,24 @@
 }
 
 .card-overlay-text {
-  display: inline-block;
-  width: 322px;
-  height: 168px;
+  display: block;
+  width: 402px;
+  height: 140px;
   margin: 0;
 
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
+  @include font(400, 18px, 1.56, 0.03em);
 
   color: getColor('secondaryBrand');
+
+  @media screen and (min-width: $tablet) {
+    width: 306px;
+    height: 168px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 322px;
+    height: 168px;
+  }
 }
 
 .project-card-notify {
@@ -74,21 +105,12 @@
   margin-bottom: 4px;
   color: getColor('mainText');
 
-  // font-weight: 700;
-  // font-size: 18px;
-  // line-height: 2;
-  // letter-spacing: 0.06em;
   @include font(700, 18px, 2, 0.06em);
 }
 
 .projects-type {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: getColor('secondaryBrand');
+  margin: 0;
+  color: getColor('secondaryText');
 
-  // font-weight: 400;
-  // font-size: 16px;
-  // line-height: 1.88;
-  // letter-spacing: 0.03em;
   @include font(400, 16px, 1.88, 0.03em);
 }
