--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,11 +3,18 @@
   display: block;
 
   font-family: $secondary-font-family;
-  @include font(700, 24px, 1.16, 0.03em);
+  @include font(24px, 700, 1.16, 0.03em);
   color: getColor('logoText');
 
+  @media screen and (min-width: $tablet) {
+    margin-right: 88px;
+  }
+
   @media screen and (min-width: $desktop) {
-    @include font(700, 26px, 1.19, 0.03em);
+    margin-right: 93px;
+
+    font-size: 26px;
+    line-height: 1.19;
   }
 
   &__accent {
@@ -15,6 +22,7 @@
   }
 
   &--footer {
+    margin-right: 0;
     margin-bottom: 20px;
 
     &__text {
