--- a/help.css
+++ b/help.css
@@ -41,3 +41,28 @@
 /* $mobile: 480px;
 $tablet: 768px;
 $desktop: 200px; */
+
+/**/
+/* =====     flexWrap cardSet    ===== */
+/**/
+
+.card-set {
+  @include tablet {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * #{$marginGap});
+    margin-left: calc(-1 * #{$marginGap});
+  }
+}
+.card-set__item {
+  margin-bottom: 30px;
+  @include tablet {
+    flex-basis: calc(100% / 2 - #{$marginGap});
+    margin-top: $marginGap;
+    margin-left: $marginGap;
+    margin-bottom: 0;
+  }
+  @include desktop {
+    flex-basis: calc(100% / 3 - #{$marginGap});
+  }
+}
