--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -7,6 +7,20 @@
 
   background: getColor('modalBgr');
 
+  overflow-y: scroll;
+
+  @media screen and (max-width: $pre_safety) {
+    padding: 10px 0;
+  }
+
+  @media screen and (min-width: $safety) and (max-width: $pre_mobile) {
+    padding: 20px 0;
+  }
+
+  @media screen and (min-width: $mobile) and (max-width: $pre_tablet) {
+    padding: 93px 0;
+  }
+
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
