--- a/sass/components/_footer-subscribe.scss
+++ b/sass/components/_footer-subscribe.scss
@@ -1,9 +1,5 @@
 .subscribe {
   &__form {
-    @media screen and (max-width: $pre_tablet) {
-      @include flexWrap();
-    }
-
     @media screen and (min-width: $desktop) {
       display: flex;
       align-items: center;
@@ -15,7 +11,7 @@
     height: 50px;
     padding: 15px 16px;
 
-    @include font(400, 16px, 1.25, 0.03em);
+    @include font(16px, 400, 1.25, 0.03em);
 
     color: getColor('footerContacts');
 
@@ -24,16 +20,14 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 
-    @media screen and (max-width: $pre_tablet) {
-      width: 100%;
-    }
-
     @media screen and (max-width: $pre_desktop) {
       margin-bottom: 20px;
     }
 
     @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
       width: 450px;
+      margin-right: auto;
+      margin-left: auto;
     }
 
     @media screen and (min-width: $desktop) {
@@ -46,9 +40,8 @@
     @include centeredFlex();
     width: 200px;
     height: 50px;
-    padding: 10px 28px;
 
-    @include font(700, 16px, 1.88, 0.06em);
+    @include font(16px, 700, 1.88, 0.06em);
 
     color: getColor('secondaryBrand');
     background: getColor('brand');
@@ -71,8 +64,6 @@
   }
 
   &__text {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-right: 10px;
+    margin: 0 10px;
   }
 }
