--- a/sass/components/_header-contacts.scss
+++ b/sass/components/_header-contacts.scss
@@ -1,25 +1,39 @@
 .header-contacts {
-  @extend %list;
-  display: flex;
-  align-items: center;
-  margin-bottom: 0;
+  @include list;
   margin-left: auto;
 
-  &__item + &__item {
-    margin-left: 50px;
+  @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
+    display: flex;
+    flex-direction: column;
+
+    &__item:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    align-items: center;
+
+    &__item + &__item {
+      margin-left: 50px;
+    }
   }
 }
 
 .header-contacts__link {
-  @extend %link;
-  display: inline-flex;
+  @include link;
+  display: flex;
   align-items: center;
 
-  // font-weight: 500;
-  // font-size: 14px;
-  // line-height: 1.14;
-  // letter-spacing: 0.02em;
-  @include font(500, 14px, 1.14, 0.02em);
+  @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
+    @include font(12px, 500, 1.16, 0.02em);
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    line-height: 1.14;
+  }
 
   color: getColor('secondaryText');
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
