--- a/sass/components/_hero-btn.scss
+++ b/sass/components/_hero-btn.scss
@@ -5,7 +5,7 @@
   min-width: 200px;
   height: 50px;
 
-  @include font(700, 16px, 1.88, 0.06em);
+  @include font(16px, 700, 1.88, 0.06em);
   color: getColor('secondaryBrand');
 
   background-color: getColor('brand');
