--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,32 +1,35 @@
 .modal {
-  padding: 40px;
+  position: relative;
+  width: 95vw;
+  margin: 0 auto;
+  padding: 40px 10px;
 
   background-color: getColor('mainBgr');
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  @media screen and (max-width: $pre_desktop) {
-    position: relative;
-    margin-top: 93px;
-    margin-left: auto;
-    margin-right: auto;
+  transform: scale(1);
+
+  @media screen and (min-width: $pre_safety) {
+    padding: 40px 20px;
+  }
+
+  @media screen and (min-width: $mobile) {
     width: 450px;
-    height: 609px;
+    padding: 40px 40px;
   }
 
-  @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
-    margin-top: 208px;
-  }
-
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $tablet) {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1);
 
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  @media screen and (min-width: $desktop) {
     width: 528px;
-    height: 581px;
   }
 
   &__close-btn {
