--- a/sass/components/_portfolio-filter-btn.scss
+++ b/sass/components/_portfolio-filter-btn.scss
@@ -1,11 +1,8 @@
 .portfolio__filter-btn {
-  height: 38px;
+  // height: 38px;
   padding: 6px 22px;
 
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
+  @include font(16px, 500, 1.62, 0.03em);
   text-align: center;
 
   background-color: getColor('secondaryBgr');
