--- a/sass/components/_portfolio-project-card.scss
+++ b/sass/components/_portfolio-project-card.scss
@@ -1,6 +1,6 @@
 .project-card {
   display: block;
-  width: 450px;
+  max-width: 450px;
 
   border-left: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
@@ -14,7 +14,7 @@
   }
 
   @media screen and (min-width: $tablet) and (max-width: $pre_desktop) {
-    width: calc((100% - 30px) / 2);
+    flex-basis: calc((100% - 30px) / 2);
     margin-right: 30px;
     margin-bottom: 30px;
 
@@ -28,7 +28,7 @@
   }
 
   @media screen and (min-width: $desktop) {
-    width: calc((100% - 2 * 30px) / 3);
+    flex-basis: calc((100% - 60px) / 3);
     margin-right: 30px;
     margin-bottom: 30px;
 
@@ -77,22 +77,23 @@
 
 .card-overlay-text {
   display: block;
-  width: 402px;
-  height: 140px;
+  max-width: 402px;
   margin: 0;
 
-  @include font(400, 18px, 1.56, 0.03em);
+  @include font(18px, 400, 1.56, 0.03em);
 
   color: getColor('secondaryBrand');
 
+  @media screen and (max-width: $pre_safety) {
+    font-size: 14px;
+  }
+
   @media screen and (min-width: $tablet) {
-    width: 306px;
-    height: 168px;
+    max-width: 306px;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 322px;
-    height: 168px;
+    max-width: 322px;
   }
 }
 
@@ -105,12 +106,12 @@
   margin-bottom: 4px;
   color: getColor('mainText');
 
-  @include font(700, 18px, 2, 0.06em);
+  @include font(18px, 700, 2, 0.06em);
 }
 
 .projects-type {
   margin: 0;
   color: getColor('secondaryText');
 
-  @include font(400, 16px, 1.88, 0.03em);
+  @include font(16px, 400, 1.88, 0.03em);
 }
