--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,9 +1,8 @@
 .site-nav {
-  @extend %list;
+  @include list;
   display: flex;
   align-items: center;
   margin-bottom: 0;
-  margin-left: 93px;
 
   &__item + &__item {
     margin-left: 50px;
@@ -11,15 +10,10 @@
 }
 
 .site-nav__link {
-  @extend %link;
+  @include link;
   position: relative;
-  display: inline-block;
 
-  // font-weight: 500;
-  // font-size: 14px;
-  // line-height: 1.14;
-  // letter-spacing: 0.02em;
-  @include font(500, 14px, 1.14, 0.02em);
+  @include font(14px, 500, 1.14, 0.02em);
 
   color: getColor('mainText');
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -39,7 +33,7 @@
       bottom: -33px;
       left: 0;
 
-      display: inline-block;
+      display: block;
       height: 4px;
       width: 100%;
 
