--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,21 +1,36 @@
 .clients {
   &__list {
     @include list();
-    @include flexWrap();
-    margin: -15px;
-  }
 
-  &__item {
-    width: calc((100% - 2 * 30px) / 2);
-    height: 92px;
-    margin: 15px;
-
-    @media screen and (min-width: $tablet) {
-      width: calc((100% - 3 * 30px) / 3);
+    @media screen and (min-width: $pre_safety) {
+      @include flexWrap();
+      margin: -15px;
     }
 
     @media screen and (min-width: $desktop) {
-      width: calc((100% - 6 * 30px) / 6);
+      flex-wrap: nowrap;
+    }
+  }
+
+  &__item {
+    @media screen and (max-width: $pre_safety) {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
+
+    @media screen and (min-width: $pre_safety) {
+      flex-basis: calc((100% - 60px) / 2);
+      height: 92px;
+      margin: 15px;
+    }
+
+    @media screen and (min-width: $tablet) {
+      flex-basis: calc((100% - 90px) / 3);
+    }
+
+    @media screen and (min-width: $desktop) {
+      flex-basis: calc((100% - 180px) / 6);
     }
   }
 
