--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,9 +1,13 @@
 .container {
+  width: 95vw;
   margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
 
   border: 2px solid tomato;
+
+  @media screen and (min-width: $pre_safety) {
+    width: $pre_safety;
+  }
 
   @media screen and (min-width: $mobile) {
     width: $mobile;
