--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,6 +1,5 @@
 .hero {
-  padding-top: 118px;
-  padding-bottom: 118px;
+  padding-top: 110px;
   max-width: 480px;
   height: 400px;
   margin-left: auto;
@@ -13,28 +12,37 @@
   background-position: center;
   background-size: cover;
 
+  @media screen and (min-width: $mobile) {
+    padding-top: 118px;
+  }
+
   @media screen and (min-width: $tablet) {
     max-width: 768px;
+    height: 400px;
   }
 
   @media screen and (min-width: $desktop) {
     padding-top: 200px;
-    padding-bottom: 200px;
     max-width: 1600px;
     height: 600px;
   }
 
   &__title {
-    margin-top: 0;
-    margin-bottom: 30px;
-    @include font(900, 26px, 1.62, 0.06em);
+    margin: 0 auto 30px auto;
+
+    @include font(18px, 700, 1.5, 0.04em);
 
     text-align: center;
     text-transform: uppercase;
     color: getColor('secondaryBrand');
 
+    @media screen and (min-width: $mobile) {
+      @include font(26px, 900, 1.62, 0.06em);
+    }
+
     @media screen and (min-width: $desktop) {
-      @include font(900, 44px, 1.36, 0.06em);
+      font-size: 44px;
+      line-height: 1.36;
     }
   }
 }
