--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -5,9 +5,9 @@
 
   border: 2px solid tomato;
 
-  @media screen and (min-width: $pre_safety) {
-    width: $pre_safety;
-  }
+  // @media screen and (min-width: $pre_safety) {
+  //   width: $pre_safety;
+  // }
 
   @media screen and (min-width: $mobile) {
     width: $mobile;
