--- a/css/main.css
+++ b/css/main.css
@@ -322,11 +322,6 @@ body.modal-open {
   padding: 0 15px;
   border: 2px solid tomato;
 }
-@media screen and (min-width: 319px) {
-  .container {
-    width: 319px;
-  }
-}
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
@@ -1570,7 +1565,6 @@ body.modal-open {
 
 .project-card {
   display: block;
-  max-width: 450px;
   border-left: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
@@ -1623,6 +1617,13 @@ body.modal-open {
 
 .project-link {
   text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .overlay-card-box {
@@ -1681,6 +1682,9 @@ body.modal-open {
 }
 
 .project-card-notify {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 20px 24px;
 }
 
