--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@
 */
 @import './layout/header';
 @import './components/logo';
-@import './components/site-nav';
+@import './components/header-nav';
 @import './components/header-contacts';
 /* 
 =========== стили героя
