--- a/css/main.css
+++ b/css/main.css
@@ -290,6 +290,14 @@ body.modal-open {
   overflow: hidden;
 }
 
+.mob-menu-closed {
+  display: none;
+}
+
+body.mob-menu-opened {
+  overflow: hidden;
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -357,6 +365,7 @@ body.modal-open {
 
 .logo {
   text-decoration: none;
+  color: inherit;
   display: block;
   font-family: "Raleway", sans-serif;
   font-size: 24px;
@@ -400,12 +409,18 @@ body.modal-open {
           align-items: center;
   margin-bottom: 0;
 }
+@media screen and (max-width: 767px) {
+  .site-nav {
+    display: none;
+  }
+}
 .site-nav__item + .site-nav__item {
   margin-left: 50px;
 }
 
 .site-nav__link {
   text-decoration: none;
+  color: inherit;
   position: relative;
   font-size: 14px;
   font-weight: 500;
@@ -433,14 +448,19 @@ body.modal-open {
   background-color: #2196f3;
 }
 
-.header-contacts {
+.header__contacts-list {
   margin: 0;
   padding: 0;
   list-style: none;
   margin-left: auto;
 }
+@media screen and (max-width: 767px) {
+  .header__contacts-list {
+    display: none;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .header-contacts {
+  .header__contacts-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -449,12 +469,9 @@ body.modal-open {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .header-contacts__item:not(:last-child) {
-    margin-bottom: 10px;
-  }
 }
 @media screen and (min-width: 1200px) {
-  .header-contacts {
+  .header__contacts-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -462,13 +479,30 @@ body.modal-open {
         -ms-flex-align: center;
             align-items: center;
   }
-  .header-contacts__item + .header-contacts__item {
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header__contacts-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__contacts-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header__contacts-item + .header__contacts-item {
     margin-left: 50px;
   }
 }
 
-.header-contacts__link {
+.header__contacts-link {
   text-decoration: none;
+  color: inherit;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -480,7 +514,7 @@ body.modal-open {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .header-contacts__link {
+  .header__contacts-link {
     font-size: 12px;
     font-weight: 500;
     line-height: 1.16;
@@ -488,18 +522,150 @@ body.modal-open {
   }
 }
 @media screen and (min-width: 1200px) {
-  .header-contacts__link {
+  .header__contacts-link {
     font-size: 14px;
     line-height: 1.14;
   }
 }
-.header-contacts__link:hover, .header-contacts__link:focus {
+.header__contacts-link:hover, .header__contacts-link:focus {
   color: #2196f3;
 }
 
-.header-contacts__icon {
+.header__contacts-icon {
   fill: currentColor;
   margin-right: 10px;
+}
+
+.mob-menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 5;
+  padding: 48px 40px;
+  overflow: auto;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  background-color: #fff;
+}
+.mob-menu.is-open {
+  display: block;
+}
+
+.mob-menu__btn {
+  display: block;
+  margin-left: auto;
+  border: 0;
+  color: #000;
+  background-color: transparent;
+  cursor: pointer;
+}
+.mob-menu__btn:hover, .mob-menu__btn:focus {
+  color: #2196f3;
+}
+@media screen and (min-width: 768px) {
+  .mob-menu__btn {
+    display: none;
+  }
+}
+.mob-menu__btn--close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.mob-menu__icon {
+  fill: currentColor;
+}
+
+.mob-menu__nav {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.mob-menu__nav-item:not(:last-child) {
+  padding-bottom: 32px;
+}
+.mob-menu__nav-link {
+  text-decoration: none;
+  color: inherit;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu__nav-link:hover, .mob-menu__nav-link:focus {
+  color: #2196f3;
+}
+.mob-menu__nav-link--current {
+  color: #2196f3;
+}
+
+.mob-menu__bottom {
+  margin-top: auto;
+}
+
+.mob-menu__contacts-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-bottom: 64px;
+}
+.mob-menu__contacts-list-item:not(:last-child) {
+  padding-bottom: 32px;
+}
+.mob-menu__contacts-list-link {
+  text-decoration: none;
+  color: inherit;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu__contacts-list-link:hover, .mob-menu__contacts-list-link:focus {
+  color: #2196f3;
+}
+.mob-menu__contacts-list-tel {
+  font-size: 40px;
+  color: #2196f3;
+}
+.mob-menu__contacts-list-email {
+  font-size: 24px;
+  line-height: 1.17;
+  color: #757575;
+}
+
+.mob-menu__soc-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 18px;
+  line-height: 1.22;
+  color: #2196f3;
+}
+.mob-menu__soc-list-link {
+  text-decoration: none;
+  color: inherit;
+}
+.mob-menu__soc-list-item:not(:last-child) {
+  position: relative;
+  margin-right: 20px;
+}
+.mob-menu__soc-list-item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -10px;
+  display: inline-block;
+  width: 1px;
+  height: 22px;
+  background-color: rgba(33, 33, 33, 0.2);
 }
 
 /* 
@@ -1044,6 +1210,7 @@ body.modal-open {
 }
 .footer__contact-link {
   text-decoration: none;
+  color: inherit;
   color: rgba(255, 255, 255, 0.6);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1436,6 +1603,7 @@ body.modal-open {
 }
 .form__policy-link {
   text-decoration: none;
+  color: inherit;
   margin-left: 3px;
   color: #2196f3;
   text-decoration: underline;
@@ -1617,6 +1785,7 @@ body.modal-open {
 
 .project-link {
   text-decoration: none;
+  color: inherit;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
