--- a/sass/components/_header-nav.scss
+++ b/sass/components/_header-nav.scss
@@ -1,5 +1,10 @@
 .site-nav {
+  @media screen and (max-width: $pre_tablet) {
+    display: none;
+  }
+
   @include list;
+
   display: flex;
   align-items: center;
   margin-bottom: 0;
@@ -11,6 +16,7 @@
 
 .site-nav__link {
   @include link;
+
   position: relative;
 
   @include font(14px, 500, 1.14, 0.02em);
